--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2069, 276)\n",
-      "Exercise Transform Data(Tuple) Count: 2069\n"
+      "Raw Data Count(Exercises, Days): (2076, 277)\n",
+      "Exercise Transform Data(Tuple) Count: 2076\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 276\n"
+      "Exercise Days: 277\n"
      ]
     }
    ],
@@ -196,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Arnold Press[Dumbbell]', 17)\n",
+      "('Arnold Press[Dumbbell]', 18)\n",
       "('Assisted Dips[Machine]', 44)\n",
       "('Assisted Pull-Up[Machine]', 59)\n",
       "('Back Extension', 37)\n",
@@ -258,7 +258,7 @@
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 117)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 7)\n",
+      "('Military Press[Smith Machine]', 8)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
@@ -269,17 +269,17 @@
       "('Power Leg Press[Machine]', 57)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 11)\n",
-      "('Reverse Cable Cross-Over[Cable]', 4)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 19)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 20)\n",
       "('Running', 47)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Seated Chest Press[Machine]', 90)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 72)\n",
-      "('Shoulder Press[Machine]', 82)\n",
-      "('Side Lateral Raise[Dumbbell]', 66)\n",
+      "('Shoulder Press[Machine]', 83)\n",
+      "('Side Lateral Raise[Dumbbell]', 67)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -297,7 +297,7 @@
       "('Trx Lunge', 1)\n",
       "('Trx Row', 2)\n",
       "('Trx Suspended Lunge', 1)\n",
-      "('Upright Row[EZ Curl Bar]', 7)\n",
+      "('Upright Row[EZ Curl Bar]', 8)\n",
       "('Vipr Ice Skater', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
@@ -338,15 +338,15 @@
       "('Lat Pulldown[Machine]', 102)\n",
       "('Seated Chest Press[Machine]', 90)\n",
       "('Deadlift[Barbell]', 88)\n",
-      "('Shoulder Press[Machine]', 82)\n",
+      "('Shoulder Press[Machine]', 83)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Hip Abduction[Machine]', 80)\n",
       "('Seated Row[Machine]', 72)\n",
+      "('Side Lateral Raise[Dumbbell]', 67)\n",
       "('Long Pull Row[Cable]', 67)\n",
-      "('Side Lateral Raise[Dumbbell]', 66)\n",
       "('Leg Extension[Machine]', 62)\n",
-      "('Flat Bench Press[Barbell]', 59)\n",
       "('Assisted Pull-Up[Machine]', 59)\n",
+      "('Flat Bench Press[Barbell]', 59)\n",
       "('Power Leg Press[Machine]', 57)\n",
       "('Running', 47)\n",
       "('Straight Arm Pulldown[Cable]', 46)\n",
@@ -360,89 +360,89 @@
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 20)\n",
       "('Incline Bench Press[Barbell]', 20)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 19)\n",
+      "('Arnold Press[Dumbbell]', 18)\n",
       "('Dips', 18)\n",
       "('Incline Bench Press[Dumbbell]', 18)\n",
-      "('Arnold Press[Dumbbell]', 17)\n",
-      "('Flat Bench Press[Dumbbell]', 17)\n",
       "('Bent Over Row[Dumbbell]', 17)\n",
+      "('Flat Bench Press[Dumbbell]', 17)\n",
       "('Goblet Squat[Kettlebell]', 15)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Push-Up', 11)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
-      "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Split Squat[Smith Machine]', 8)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Bent Over Row[Barbell]', 8)\n",
+      "('Military Press[Smith Machine]', 8)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
+      "('Split Squat[Smith Machine]', 8)\n",
+      "('Upright Row[EZ Curl Bar]', 8)\n",
       "('Split Squat[Kettlebell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Military Press[Smith Machine]', 7)\n",
-      "('Upright Row[EZ Curl Bar]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Cable Cross-Over[Cable]', 5)\n",
-      "('Hip Thrust', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Body-Weight Squat', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
-      "('Reverse Cable Cross-Over[Cable]', 4)\n",
-      "('Reverse Crunch', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Reverse Crunch', 4)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Walking', 2)\n",
-      "('Trx Row', 2)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('One Leg Daedlift[Kettlebell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Walking', 2)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
+      "('Split Squat', 1)\n",
       "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Full Squat[Barbell]', 1)\n"
+      "('Trx Suspended Lunge', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('One Leg Daedlift[Kettlebell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n"
      ]
     }
    ],
