--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2076, 277)\n",
-      "Exercise Transform Data(Tuple) Count: 2076\n"
+      "Raw Data Count(Exercises, Days): (2081, 278)\n",
+      "Exercise Transform Data(Tuple) Count: 2081\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 277\n"
+      "Exercise Days: 278\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
       "('Chest Fly[Pec Deck Machine]', 42)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 88)\n",
+      "('Deadlift[Barbell]', 89)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
@@ -231,14 +231,14 @@
       "('Full Squat[Barbell]', 1)\n",
       "('Full Squat[Smith Machine]', 2)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
-      "('Goblet Squat[Kettlebell]', 15)\n",
+      "('Goblet Squat[Kettlebell]', 16)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Hanging Leg Raise', 3)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
-      "('Hip Abduction[Machine]', 80)\n",
+      "('Hip Abduction[Machine]', 81)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
@@ -256,7 +256,7 @@
       "('Leg Extension[Machine]', 62)\n",
       "('Long Pull Row[Cable]', 67)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 117)\n",
+      "('Lying Leg Curls[Machine]', 118)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 8)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
@@ -285,7 +285,7 @@
       "('Split Squat', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Split Squat[Smith Machine]', 8)\n",
+      "('Split Squat[Smith Machine]', 9)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
       "('Straight Arm Pulldown[Cable]', 46)\n",
@@ -333,20 +333,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 117)\n",
+      "('Lying Leg Curls[Machine]', 118)\n",
       "('Plank', 102)\n",
       "('Lat Pulldown[Machine]', 102)\n",
       "('Seated Chest Press[Machine]', 90)\n",
-      "('Deadlift[Barbell]', 88)\n",
+      "('Deadlift[Barbell]', 89)\n",
       "('Shoulder Press[Machine]', 83)\n",
+      "('Hip Abduction[Machine]', 81)\n",
       "('Hip Adduction[Machine]', 81)\n",
-      "('Hip Abduction[Machine]', 80)\n",
       "('Seated Row[Machine]', 72)\n",
-      "('Side Lateral Raise[Dumbbell]', 67)\n",
       "('Long Pull Row[Cable]', 67)\n",
+      "('Side Lateral Raise[Dumbbell]', 67)\n",
       "('Leg Extension[Machine]', 62)\n",
-      "('Assisted Pull-Up[Machine]', 59)\n",
       "('Flat Bench Press[Barbell]', 59)\n",
+      "('Assisted Pull-Up[Machine]', 59)\n",
       "('Power Leg Press[Machine]', 57)\n",
       "('Running', 47)\n",
       "('Straight Arm Pulldown[Cable]', 46)\n",
@@ -354,95 +354,95 @@
       "('Chest Fly[Pec Deck Machine]', 42)\n",
       "('Back Extension', 37)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
-      "('Incline Bench Press[Machine]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Incline Bench Press[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 20)\n",
       "('Incline Bench Press[Barbell]', 20)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 20)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Arnold Press[Dumbbell]', 18)\n",
       "('Dips', 18)\n",
       "('Incline Bench Press[Dumbbell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 17)\n",
       "('Flat Bench Press[Dumbbell]', 17)\n",
-      "('Goblet Squat[Kettlebell]', 15)\n",
+      "('Bent Over Row[Dumbbell]', 17)\n",
+      "('Goblet Squat[Kettlebell]', 16)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
       "('Pull-Up', 12)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
-      "('Push-Up', 11)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Push-Up', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
+      "('Split Squat[Smith Machine]', 9)\n",
       "('Bent Over Row[Barbell]', 8)\n",
+      "('Upright Row[EZ Curl Bar]', 8)\n",
       "('Military Press[Smith Machine]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Split Squat[Smith Machine]', 8)\n",
-      "('Upright Row[EZ Curl Bar]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Hack Squat[Machine]', 6)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Body-Weight Squat', 5)\n",
-      "('Hip Thrust', 5)\n",
-      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Hack Squat[Machine]', 6)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Behind The Neck Press[Smith Machine]', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Hip Thrust', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Full Squat[Smith Machine]', 2)\n",
       "('Trx Row', 2)\n",
       "('Dead Bug', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Walking', 2)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
       "('Vipr Overhead Squat', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Full Squat[Barbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Flat Bench Press[Dumbbel]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Trx Lunge', 1)\n",
+      "('Split Squat', 1)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('One Leg Daedlift[Kettlebell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n"
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('One Leg Daedlift[Kettlebell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n"
      ]
     }
    ],
