--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2086, 279)\n",
-      "Exercise Transform Data(Tuple) Count: 2086\n"
+      "Raw Data Count(Exercises, Days): (2092, 280)\n",
+      "Exercise Transform Data(Tuple) Count: 2092\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 279\n"
+      "Exercise Days: 280\n"
      ]
     }
    ],
@@ -198,12 +198,12 @@
      "text": [
       "('Arnold Press[Dumbbell]', 18)\n",
       "('Assisted Dips[Machine]', 45)\n",
-      "('Assisted Pull-Up[Machine]', 59)\n",
-      "('Back Extension', 37)\n",
+      "('Assisted Pull-Up[Machine]', 60)\n",
+      "('Back Extension', 38)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 8)\n",
+      "('Bent Over Row[Barbell]', 9)\n",
       "('Bent Over Row[Dumbbell]', 17)\n",
       "('Biceps Curls[Barbell]', 1)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
@@ -251,7 +251,7 @@
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 102)\n",
+      "('Lat Pulldown[Machine]', 103)\n",
       "('Leg Extension[Machine]', 62)\n",
       "('Long Pull Row[Cable]', 67)\n",
       "('Lunge[Dumbbell]', 1)\n",
@@ -276,7 +276,7 @@
       "('Seated Chest Press[Machine]', 90)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 72)\n",
+      "('Seated Row[Machine]', 73)\n",
       "('Shoulder Press[Machine]', 83)\n",
       "('Side Lateral Raise[Dumbbell]', 67)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
@@ -287,7 +287,7 @@
       "('Split Squat[Smith Machine]', 9)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 46)\n",
+      "('Straight Arm Pulldown[Cable]', 47)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
@@ -333,25 +333,25 @@
      "output_type": "stream",
      "text": [
       "('Lying Leg Curls[Machine]', 118)\n",
+      "('Lat Pulldown[Machine]', 103)\n",
       "('Plank', 102)\n",
-      "('Lat Pulldown[Machine]', 102)\n",
       "('Seated Chest Press[Machine]', 90)\n",
       "('Deadlift[Barbell]', 89)\n",
       "('Shoulder Press[Machine]', 83)\n",
       "('Hip Abduction[Machine]', 81)\n",
       "('Hip Adduction[Machine]', 81)\n",
-      "('Seated Row[Machine]', 72)\n",
-      "('Long Pull Row[Cable]', 67)\n",
+      "('Seated Row[Machine]', 73)\n",
       "('Side Lateral Raise[Dumbbell]', 67)\n",
+      "('Long Pull Row[Cable]', 67)\n",
       "('Leg Extension[Machine]', 62)\n",
+      "('Assisted Pull-Up[Machine]', 60)\n",
       "('Flat Bench Press[Barbell]', 60)\n",
-      "('Assisted Pull-Up[Machine]', 59)\n",
       "('Power Leg Press[Machine]', 57)\n",
       "('Running', 47)\n",
-      "('Straight Arm Pulldown[Cable]', 46)\n",
+      "('Straight Arm Pulldown[Cable]', 47)\n",
       "('Assisted Dips[Machine]', 45)\n",
       "('Chest Fly[Pec Deck Machine]', 43)\n",
-      "('Back Extension', 37)\n",
+      "('Back Extension', 38)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
       "('Incline Bench Press[Machine]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
@@ -359,88 +359,88 @@
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
       "('Incline Bench Press[Barbell]', 21)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 20)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 20)\n",
       "('Incline Bench Press[Dumbbell]', 19)\n",
-      "('Dips', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Arnold Press[Dumbbell]', 18)\n",
+      "('Dips', 18)\n",
       "('Bent Over Row[Dumbbell]', 17)\n",
       "('Goblet Squat[Kettlebell]', 16)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Pull-Up', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Pull-Up', 12)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Push-Up', 11)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Split Squat[Smith Machine]', 9)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Bent Over Row[Barbell]', 8)\n",
+      "('Bent Over Row[Barbell]', 9)\n",
+      "('Split Squat[Smith Machine]', 9)\n",
       "('Upright Row[EZ Curl Bar]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Military Press[Smith Machine]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
+      "('Military Press[Smith Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
+      "('Hip Thrust', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
       "('Body-Weight Squat', 5)\n",
       "('Cable Cross-Over[Cable]', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Hip Thrust', 5)\n",
-      "('Squat[Dumbbell]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Hanging Leg Raise', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
       "('Trx Row', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Walking', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Dead Bug', 2)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('One Leg Daedlift[Kettlebell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Walking', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Hip Abduction', 1)\n",
-      "('Full Squat[Barbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Cross Lunges', 1)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('One Leg Daedlift[Kettlebell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
       "('Face Pulls[Cable]', 1)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Hip External Rotation', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Split Squat', 1)\n"
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n"
      ]
     }
    ],
