--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "## Workout Analytics\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "import ssl\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2194, 297)\n",
-      "Exercise Transform Data(Tuple) Count: 2194\n"
+      "Raw Data Count(Exercises, Days): (2200, 298)\n",
+      "Exercise Transform Data(Tuple) Count: 2200\n"
      ]
     }
    ],
@@ -168,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 297\n"
+      "Exercise Days: 298\n"
      ]
     }
    ],
@@ -192,14 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "('Arnold Press[Dumbbell]', 23)\n",
-      "('Assisted Dips[Machine]', 49)\n",
+      "('Assisted Dips[Machine]', 50)\n",
       "('Assisted Pull-Up[Machine]', 64)\n",
       "('Back Extension', 41)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
@@ -215,10 +215,10 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 47)\n",
+      "('Chest Fly[Pec Deck Machine]', 48)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 93)\n",
+      "('Deadlift[Barbell]', 94)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
@@ -246,7 +246,7 @@
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 25)\n",
-      "('Incline Bench Press[Dumbbell]', 22)\n",
+      "('Incline Bench Press[Dumbbell]', 23)\n",
       "('Incline Bench Press[Machine]', 35)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
@@ -254,7 +254,7 @@
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
       "('Lat Pulldown[Machine]', 107)\n",
-      "('Leg Extension[Machine]', 62)\n",
+      "('Leg Extension[Machine]', 63)\n",
       "('Long Pull Row[Cable]', 69)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 121)\n",
@@ -267,7 +267,7 @@
       "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Plank', 104)\n",
-      "('Power Leg Press[Machine]', 61)\n",
+      "('Power Leg Press[Machine]', 62)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 11)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -337,7 +337,7 @@
       "('Lying Leg Curls[Machine]', 121)\n",
       "('Lat Pulldown[Machine]', 107)\n",
       "('Plank', 104)\n",
-      "('Deadlift[Barbell]', 93)\n",
+      "('Deadlift[Barbell]', 94)\n",
       "('Seated Chest Press[Machine]', 90)\n",
       "('Shoulder Press[Machine]', 85)\n",
       "('Hip Abduction[Machine]', 85)\n",
@@ -345,104 +345,104 @@
       "('Seated Row[Machine]', 77)\n",
       "('Side Lateral Raise[Dumbbell]', 72)\n",
       "('Long Pull Row[Cable]', 69)\n",
-      "('Assisted Pull-Up[Machine]', 64)\n",
       "('Flat Bench Press[Barbell]', 64)\n",
-      "('Leg Extension[Machine]', 62)\n",
-      "('Power Leg Press[Machine]', 61)\n",
+      "('Assisted Pull-Up[Machine]', 64)\n",
+      "('Leg Extension[Machine]', 63)\n",
+      "('Power Leg Press[Machine]', 62)\n",
+      "('Assisted Dips[Machine]', 50)\n",
       "('Straight Arm Pulldown[Cable]', 50)\n",
-      "('Assisted Dips[Machine]', 49)\n",
+      "('Chest Fly[Pec Deck Machine]', 48)\n",
       "('Running', 47)\n",
-      "('Chest Fly[Pec Deck Machine]', 47)\n",
       "('Back Extension', 41)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Incline Bench Press[Machine]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Incline Bench Press[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 25)\n",
       "('Incline Bench Press[Barbell]', 25)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 25)\n",
       "('Arnold Press[Dumbbell]', 23)\n",
-      "('Incline Bench Press[Dumbbell]', 22)\n",
+      "('Incline Bench Press[Dumbbell]', 23)\n",
       "('Wrist Roller', 22)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Dips', 18)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Goblet Squat[Kettlebell]', 18)\n",
       "('Bent Over Row[Dumbbell]', 17)\n",
       "('Hip Bridge', 15)\n",
-      "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
-      "('Upright Row[EZ Curl Bar]', 13)\n",
+      "('Seated Leg Press[Machine]', 14)\n",
       "('Military Press[Smith Machine]', 13)\n",
       "('Bent Over Row[Barbell]', 13)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Split Squat[Smith Machine]', 12)\n",
-      "('Pull-Up', 12)\n",
+      "('Upright Row[EZ Curl Bar]', 13)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Split Squat[Smith Machine]', 12)\n",
+      "('Pull-Up', 12)\n",
       "('Push-Up', 11)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Behind The Neck Press[Smith Machine]', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Hip Thrust', 5)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Body-Weight Squat', 5)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Behind The Neck Press[Smith Machine]', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Walking', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
+      "('Dead Bug', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Walking', 2)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Split Squat', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Hip External Rotation', 1)\n",
       "('Trx Suspended Lunge', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
       "('Trx Lunge', 1)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n"
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n"
      ]
     }
    ],
